# projet_cancer_sein

./: .env.example  .gitignore  .gitmodules  .paths.mk.example  Makefile  README.html  README.md  environment.yml  pyproject.toml  requirements.txt
data/sample/: predictions.csv  source_dir.txt  train.csv
doc/: troubleshooting.md
docs/: kaggle_setup.md  test_validation_report.html
exemple_basics/: intro_pytorch.html  intro_pytorch.ipynb  intro_pytorch.qmd  train_cnn.ipynb
extraction_project/notebook/: extract_download.html  extract_download.ipynb  extract_download.qmd
extraction_project/notebook/data/extract_demo/: train_subset.csv
extraction_project/notebook/data/extract_demo/train_images/1758/: 1317720893.dcm  1484472267.dcm  1941673282.dcm  2139386820.dcm  923710334.dcm
extraction_project/script/: extract_download.py
fine_tuning/: config.py  dataset.py  features.py  loss.py  model.py  run_metadata.py  train.py  train_resnet.py  train_resnet_normalite.py
notebooks/: extract_download.qmd  pipeline_gmic.qmd  preprocess_gmic.qmd  test_validation_report.qmd
script_notebook/: finetuning_gmic.qmd  gmic.qmd  pipeline_gmic.qmd  preprocess_gmic.qmd  resnet18_training.qmd  rsna_comparison.qmd  test_validation_report.qmd
scripts/: extract_download.py  gmic_from_scratch.py  inference.py  load_images.py  migrate_runs.py  notebook_extract_online.ipynb  preprocess.py  preresize_images.py  run_gmic_pipeline.py  validate_input.py
tests/: test_validate_input.py
