[project]
name = "gmic-breast-cancer"
version = "0.1.0"
description = "Pipeline de detection du cancer du sein sur mammographies (GMIC)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "opencv-python-headless>=4.5",
    "pydicom>=2.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "tqdm>=4.60",
    "torch>=1.9",
    "matplotlib>=3.4",
    "kaggle>=1.5",
]

[project.scripts]
gmic-pipeline = "scripts.run_gmic_pipeline:main"
gmic-download = "scripts.extract_download_cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
]
